<resources>
    <string name="app_name">GADSLeaderBoard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iq_leaders">Skill IQ Leaders</string>
    <string name="learning_leaders">Learning Leaders</string>
    <string name="hours_completed">learning hours,</string>
    <string name="score_iq">skill IQ score,</string>
    <string name="developer_name">Name</string>
    <string name="developer_surname">Surname</string>
    <string name="email">Email</string>
    <string name="github_link">GitHub Link</string>
    <string name="todo">TODO</string>
    <string name="project_submissio">Project Submission</string>
</resources>