<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".GoogleForm"
    tools:showIn="@layout/activity_google_form">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputName"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248">

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/developer_name"
            android:inputType="textPersonName"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textSurname"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.673"
        app:layout_constraintStart_toEndOf="@+id/textInputName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248">
        <EditText
            android:id="@+id/edtSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/developer_surname"
            android:maxLength="20"
            android:inputType="text"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputName"
        app:layout_constraintVertical_bias="0.196"
        tools:layout_editor_absoluteX="0dp">
        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"

            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="10"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/texgitHub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmail"
        app:layout_constraintVertical_bias="0.23"
        tools:layout_editor_absoluteX="16dp">
        <EditText
            android:id="@+id/github_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/github_link"
            android:inputType="textWebEmailAddress"
            android:maxLength="10"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView_submit_form"
        android:layout_width="152dp"
        android:layout_height="184dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texgitHub"
        app:srcCompat="@drawable/submit"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>